added transition to program info

--- a/nhkfind/Base.lproj/Main.storyboard
+++ b/nhkfind/Base.lproj/Main.storyboard
@@ -569,7 +569,7 @@
     </scenes>
     <inferredMetricsTieBreakers>
         <segue reference="TKh-p9-Y8R"/>
-        <segue reference="7qK-cM-QMh"/>
-        <segue reference="X8O-DH-KTr"/>
+        <segue reference="ivP-Ei-2Tp"/>
+        <segue reference="jyK-D1-m2k"/>
     </inferredMetricsTieBreakers>
 </document>
